# xamarin-news-api

./: .env.sample  .gitignore  Cargo.toml
src/: main.rs
src/logger/: mod.rs
src/postgresql/: mod.rs
src/postgresql/models/: mod.rs  model_article.rs  model_user.rs
src/services/: mod.rs  service_article.rs  service_user.rs
