[package]
name = "xamarin-buttons"
author = "WinsomeQuill"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1.8", features = ["full"] }
serde = { version = "1.0.139", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.1.0"
serde_json = "1.0.82"
qstring = "0.7.2"
colored = "2.0"
futures = "0.3"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres", "chrono" ] }
dotenv = "0.15"
base64 = "0.21"